# baldr

./: .gitignore  .rtd-environment.yml  .travis.yml  MANIFEST.in  README.rst  setup.cfg  setup.py
baldr/: __init__.py  app.py
baldr/core/: events.py  template_mixin.py
baldr/data/: toolbar.json
baldr/widgets/: __init__.py  content_area.py  data_list.py  navigation_drawer.py  navigation_drawer.vue  tab_area.py  tab_area.vue  tool_panel.py  toolbar.py  toolbar.vue
baldr/widgets/plot_tabs/: profile.py
docs/: conf.py  index.rst
docs/baldr/: index.rst
hooks/: hook-bqplot.py
licenses/: LICENSE.rst
notebooks/: Examples.ipynb  Untitled.ipynb
utils/: py_shim.py  py_shim.spec
